fix: truncate ids in all occurances

--- a/client/src/app/components/stardust/AssetsTable.scss
+++ b/client/src/app/components/stardust/AssetsTable.scss
@@ -80,7 +80,7 @@
                     font-family: $metropolis;
                     font-weight: 700;
 
-                    &.highlight {
+                    .highlight {
                         color: var(--link-color);
                         @include font-size(14px);
 
